src/test/ui/parser/closure-return-syntax.stderr
error: expected `{`, found `22`
  --> $DIR/closure-return-syntax.rs:5:23
   |
LL |     let x = || -> i32 22;
   |                       ^^
   |                       |
   |                       expected `{`
   |                       help: try placing this code inside a block: `{ 22 }`

error: aborting due to previous error

